# gsasl

./: .clcopying  .gitignore  .gitlab-ci.yml  AUTHORS  Makefile.am  NEWS  README  README-alpha  README-hacking  THANKS  bootstrap  bootstrap.conf  cfg.mk  configure.ac
build-aux/: git2cl
doc/: Makefile.am  announce.txt  gdoc  gendocs_template  gsasl-abstraction.dia  gsasl-abstraction.eps  gsasl.texi  print-errors.c
doc/cyclo/: Makefile.am
doc/doxygen/: gdoc2doxygen
doc/reference/: Makefile.am  gsasl-docs.sgml  gsasl-docs.xml
examples/: Makefile.am  README  client-callback.c  client-mech.c  client-serverfirst.c  client-xmpp-saml20.c  client.c  server-xmpp-saml20.c  smtp-server.c
examples/openid20/: Makefile.am  README  gsasl-openid20-redirect.php  gsasl-openid20-rp.php  smtp-server-openid20.c
examples/saml20/: Makefile.am  README  gsasl-saml20-request.c  gsasl-saml20-sp.php  smtp-server-saml20.c
gl/: Makefile.am  localcharset.c  poll.c  poll.in.h  striconv.c
gl/doc/: gendocs_template.diff
gl/m4/: gnulib-cache.m4  gnulib-comp.m4  valgrind-tests.m4
gl/override/: 0001-Fix-export-symbols-and-export-symbols-regex-support-.patch
gl/top/: README-release.diff
gltests/: Makefile.am  pthread.in.h  test-environ.c  test-unsetenv.c
lib/: AUTHORS  Makefile.am  NEWS  README  THANKS  cfg.mk  configure.ac  libgsasl.pc.in
lib/anonymous/: Makefile.am  anonymous.h  client.c  mechinfo.c  server.c
lib/cram-md5/: Makefile.am  challenge.c  challenge.h  client.c  cram-md5.h  digest.c  digest.h  mechinfo.c  server.c
lib/digest-md5/: Makefile.am  README  client.c  digest-md5.h  digesthmac.c  digesthmac.h  free.c  free.h  getsubopt.c  mechinfo.c  nonascii.c  nonascii.h  parser.c  parser.h  printer.c  printer.h  qop.c  qop.h  server.c  session.c  session.h  test-parser.c  tokens.h  validate.c  validate.h
lib/gl/: Makefile.am  af_alg.c  af_alg.h  base64.c  base64.h  c++defs.h  fcntl.c  fcntl.in.h  fflush.c  fpurge.c  freading.c  freading.h  fseek.c  fseeko.c  ftello.c  gc-gnulib.c  gc-libgcrypt.c  gc-pbkdf2-sha1.c  gc-pbkdf2.c  gc.h  gl_openssl.h  gss-extra.c  hmac-md5.c  hmac-sha1.c  hmac-sha256.c  hmac.c  hmac.h  malloca.c  malloca.h  md5.c  md5.h  memxor.c  memxor.h  sha1.c  sha1.h  sha256.c  sha256.h  stdalign.in.h  stddef.in.h  stdint.in.h  (+9 more)
lib/gl/lib/: gss-extra.c  gss-extra.h
lib/gl/m4/: gc.m4  gnulib-cache.m4  gnulib-comp.m4  gss-extra.m4
lib/gl/override/lib/: gc-pbkdf2-sha1.c  gc.h  gss-extra.c  gss-extra.h
lib/gl/override/modules/: gss-extra
lib/gltests/: Makefile.am  sys_resource.in.h
lib/gs2/: Makefile.am  client.c  gs2.h  gs2helper.c  gs2helper.h  mechinfo.c  server.c
lib/gssapi/: Makefile.am  client.c  mechinfo.c  server.c  x-gssapi.h
lib/kerberos_v5/: Makefile.am  client.c  kerberos_v5.c  kerberos_v5.h  server.c  shared.h
lib/login/: Makefile.am  client.c  login.h  mechinfo.c  server.c
lib/m4/: gc.m4  gnulib-cache.m4  gnulib-comp.m4  gss-extra.m4
lib/ntlm/: Makefile.am  mechinfo.c  ntlm.c  x-ntlm.h
lib/openid20/: Makefile.am  client.c  mechinfo.c  openid20.h  server.c
lib/plain/: Makefile.am  client.c  mechinfo.c  plain.h  server.c
lib/po/: LINGUAS  POTFILES.in  da.po.in  de.po.in  eo.po.in  es.po.in  fi.po.in  fr.po.in  ga.po.in  hu.po.in  id.po.in  it.po.in  nl.po.in  pl.po.in  pt_BR.po.in  ro.po.in  sk.po.in  sr.po.in  sv.po.in  uk.po.in  vi.po.in  zh_CN.po.in
lib/saml20/: Makefile.am  client.c  mechinfo.c  saml20.h  server.c
lib/scram/: Makefile.am  client.c  mechinfo.c  parser.c  parser.h  printer.c  printer.h  scram.h  server.c  tokens.c  tokens.h  tools.c  tools.h  validate.c  validate.h
lib/securid/: Makefile.am  client.c  mechinfo.c  securid.h  server.c
lib/src/: Makefile.am  base64.c  callback.c  crypto.c  done.c  doxygen.c  error.c  free.c  gsasl-compat.h  gsasl-mech.h  gsasl-version.h.in  gsasl.h  init.c  internal.h  libgsasl.map  listmech.c  md5pwd.c  mechname.c  mechtools.c  mechtools.h  obsolete.c  property.c  register.c  saslprep.c  suggest.c  supportp.c  version.c  xcode.c  xfinish.c  xstart.c  xstep.c
lib/tests/: Makefile.am  test-error.c
lib/win32/include/: ac-stdint.h  alloca.h  config.h  stdbool.h
m4/: gnulib-cache.m4  gnulib-comp.m4
po/: LINGUAS  POTFILES.in  da.po.in  de.po.in  eo.po.in  es.po.in  eu.po.in  fi.po.in  fr.po.in  ga.po.in  hr.po.in  hu.po.in  id.po.in  it.po.in  nl.po.in  pl.po.in  pt_BR.po.in  ro.po.in  sk.po.in  sq.po.in  sr.po.in  sv.po.in  uk.po.in  vi.po.in  zh_CN.po.in  zh_TW.po.in
src/: Makefile.am  callbacks.c  callbacks.h  gsasl.c  gsasl.ggo  imap.c  imap.h  internal.h  smtp.c  smtp.h
tests/: Makefile.am  cram-md5.c  crypto.c  digest-md5.c  errors.c  external.c  gs2-krb5.c  gsasl-dovecot-gssapi.sh  gsasl-mailutils-cram.sh  gsasl-mailutils-gs2krb5-gssapi.sh  gsasl-mailutils-tls.sh  gsasl-scram-pbkdf2  gsasl-scram-pbkdf2.sh  gssapi.c  gssapi.tkt  libgsasl.supp  md5file.c  name.c  old-base64.c  old-cram-md5.c  old-digest-md5.c  old-gssapi.c  old-md5file.c  old-simple.c  openid20.c  readnz.c  saml20.c  scram-exporter.c  scram-incremental.c  scram-nopasswd.c  scram-sha256.c  scram-simple.c  scram.c  scramplus.c  simple.c  startcb.c  suggest.c  symbols.c  threadsafety  threadsafety.sh  (+4 more)
windows/: gsasl4win.mk
